creating about.html (not finall version)

--- a/Filip portfolio/main.css
+++ b/Filip portfolio/main.css
@@ -144,6 +144,56 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
   transition-delay: 0.5s;
 }
 
+.about {
+  padding-bottom: 2rem;
+}
+.about__bio-image {
+  height: 50vh;
+  width: 100%;
+  background: url("../images/profile-photo.jpeg") no-repeat center;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+.about__bio-image p {
+  margin-bottom: 2rem;
+}
+.about__bio {
+  width: 80%;
+  text-align: center;
+}
+.about__bio .text-secondary {
+  padding-bottom: 1rem;
+}
+.about .jobs {
+  width: 60vw;
+  margin: 2rem auto 2rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.about .jobs__job {
+  background: #414141;
+  padding: 0.5rem;
+  border-bottom: 5px solid #ff652f;
+  border-radius: 20px 20px 0 0;
+}
+.about .jobs__job h2, .about .jobs__job h3 {
+  margin: 0.5rem 0;
+}
+.about .jobs__job h6 {
+  margin: 0.3rem 0;
+}
+.about .social-icons {
+  display: flex;
+  flex-direction: column;
+}
+.about footer {
+  transform: rotate(90deg) translate(-3rem, -5rem);
+}
+
 body {
   background: #272727;
   color: #fff;
@@ -182,6 +232,10 @@ main .social-icons a {
   transition: all 0.3s ease-in-out;
 }
 main .social-icons a:hover {
+  color: #ff652f;
+}
+
+.text-secondary {
   color: #ff652f;
 }
 
