--- a/Filip portfolio/scss/_home.scss
+++ b/Filip portfolio/scss/_home.scss
@@ -1,4 +1,6 @@
 .home{
+   // background: url("../images/profile-photo.jpeg") no-repeat center center;
+   // background-size: contain ;
     height: 100%;
     padding-top: 40vh;
     overflow: hidden;
