--- a/Filip portfolio/scss/_index.scss
+++ b/Filip portfolio/scss/_index.scss
@@ -1,7 +1,7 @@
-@forward "./scss/reset";
+/* @forward "./scss/reset";
 @forward "./scss/variables";
 @forward "./scss/breakpoints";
 @forward "./scss/mixins";
 @forward "./scss/functions";
 @forward "./scss/home";
-@forward "./scss/menu";
+@forward "./scss/menu"; */
