--- a/Filip portfolio/main.css
+++ b/Filip portfolio/main.css
@@ -26,6 +26,10 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
   font-weight: 700;
 }
 
+.active {
+  color: #ff652f !important;
+}
+
 .menu-btn {
   position: absolute;
   z-index: 1;
@@ -113,6 +117,7 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
   transition: all 0.3s ease-in-out;
 }
 .nav .menu-nav__item.open > a:hover {
+  color: #ff652f;
   transform: scale(110%);
 }
 .nav .menu-nav__link {
@@ -124,7 +129,6 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
   transition: all 0.3s ease-in-out;
 }
 .nav .menu-nav__link:hover {
-  color: #ff652f;
   text-decoration: underline;
 }
 
@@ -194,6 +198,120 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
   transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
+.projects {
+  padding-bottom: 2rem;
+}
+.projects__bio-image {
+  height: 50vh;
+  width: 100%;
+  background: url("../images/profile-photo.jpeg") no-repeat center;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+.projects__bio-image .text-secondary {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.projects__items {
+  width: 60vw;
+  margin: 2rem auto 2rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.projects__item {
+  position: relative;
+  border-bottom: 5px solid #ff652f;
+  overflow: hidden;
+  cursor: pointer;
+}
+.projects__item:hover .projects__btns {
+  opacity: 1;
+}
+.projects__item img {
+  width: 100%;
+}
+.projects__item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 100%;
+  background-color: #ff652f;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.projects__item:hover::after {
+  top: 0;
+  opacity: 0.9;
+}
+.projects__btns {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.projects__btn {
+  z-index: 1;
+  transition: all 0.3s ease-in-out;
+}
+.projects__btn:hover {
+  color: #000;
+}
+.projects-image {
+  text-align: center;
+}
+.projects .social-icons {
+  display: flex;
+  flex-direction: column;
+}
+.projects footer {
+  transform: rotate(90deg) translate(-3rem, -5rem);
+}
+
+.active {
+  color: #ff652f;
+}
+
+.contact {
+  height: 100%;
+  padding-top: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.contact__wrapper {
+  flex-direction: column;
+}
+.contact__text {
+  font-size: 2.5rem;
+  color: #fff;
+}
+.contact__mail {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.contact__tel {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.contact__adress {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
 body {
   background: #272727;
   color: #fff;
@@ -247,4 +365,8 @@ footer {
   text-align: right;
   padding: 1rem;
   color: #fff;
+}
+
+.p1 {
+  padding: 1rem !important;
 }/*# sourceMappingURL=main.css.map */
