--- a/Filip portfolio/main.scss
+++ b/Filip portfolio/main.scss
@@ -12,6 +12,7 @@ OLD WAY OF DOING IMPORTS, THAT GOT REPLACED WITH @USE AND @FORWARD
 @import "./scss/about";
 @import "./scss/projects";
 @import "./scss/contact";
+@import "./scss/responsive";
 
 
 
