--- a/Filip portfolio/scss/_contact.scss
+++ b/Filip portfolio/scss/_contact.scss
@@ -27,3 +27,8 @@
         color: set-text-color($primary-color);
     }
 }
+
+.social-icons--contact{
+    position: initial !important;
+    margin-top: 2rem;
+}
