--- a/Filip portfolio/scss/_about.scss
+++ b/Filip portfolio/scss/_about.scss
@@ -2,10 +2,10 @@
     padding-bottom: 2rem;
 
     &__bio-image{
-        height: 50vh;
+        height: 60vh;
         width: 100%;
-        background: url("../images/profile-photo.jpeg") no-repeat center;
-        background-size: contain;
+        background: url("../images/profile-photo.jpeg") no-repeat center 10%;
+        background-size: cover;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -16,8 +16,12 @@
         }
     }
     &__bio{
-        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         text-align: center;
+        padding: 1rem 2rem;
+        
 
         .text-secondary{
             padding-bottom: 1rem;
