--- a/Filip portfolio/scss/_projects.scss
+++ b/Filip portfolio/scss/_projects.scss
@@ -1,19 +1,25 @@
 .projects{
     padding-bottom: 2rem;
 
-    &__bio-image{
-        height: 50vh;
-        width: 100%;
-        background: url("../images/profile-photo.jpeg") no-repeat center;
-        background-size: contain;
+    &__text{
+        display: none;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
+        font-size: 1.7rem;
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+    }
+
+    &-image{
+        height: 20vh;
+        width: 100%;
+        display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
 
         .text-secondary{
             font-size: 2rem;
-            margin-bottom: 2rem;
+            padding-bottom: 2rem;
         }
     }
 
