--- a/Filip portfolio/scss/_home.scss
+++ b/Filip portfolio/scss/_home.scss
@@ -1,3 +1,6 @@
+@use "./functions" as *;
+@use "./variables" as *;
+
 .home{
    // background: url("../images/profile-photo.jpeg") no-repeat center center;
    // background-size: contain ;
