--- a/Filip portfolio/scss/_responsive.scss
+++ b/Filip portfolio/scss/_responsive.scss
@@ -1,3 +1,8 @@
+@use "./breakpoints" as *;
+@use "./mixins" as *;
+@use "./functions" as *;
+
+
 @include bigger-than(sm){
     .menu-btn{
         visibility: hidden;
