--- a/Filip portfolio/scss/_projects.scss
+++ b/Filip portfolio/scss/_projects.scss
@@ -6,12 +6,13 @@
     padding-bottom: 2rem;
 
     &__text{
-        display: none;
         display: flex;
         justify-content: center;
+        text-align: center;
         font-size: 1.7rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
         margin-bottom: 4rem;
+        width: 100%;
     }
 
     &-image{
