projects heading adding padding so text doesnt collide with hamburger + github line through for projects which does not have working git hub anchor

--- a/Filip portfolio/scss/_projects.scss
+++ b/Filip portfolio/scss/_projects.scss
@@ -12,6 +12,7 @@
         font-size: 1.7rem;
         margin-top: 2rem;
         margin-bottom: 4rem;
+        padding: 0 4rem;
         width: 100%;
     }
 
