--- a/Filip portfolio/main.css
+++ b/Filip portfolio/main.css
@@ -212,6 +212,7 @@ a {
   font-size: 1.7rem;
   margin-top: 2rem;
   margin-bottom: 4rem;
+  padding: 0 4rem;
   width: 100%;
 }
 .projects-image {
@@ -454,4 +455,8 @@ footer {
 
 .p1 {
   padding: 1rem !important;
+}
+
+.line-through {
+  text-decoration: line-through !important;
 }/*# sourceMappingURL=main.css.map */
